Use TCK 3.0.1-RC1 (#388)